--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=8761
 eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 zuul.prefix=/api
 zuul.routes.middleware.path=/Organizer-APPLICATION/**
 zuul.routes.middleware.url=http://localhost:8081/
+
+persistance.application.name=ORGANIZER-PERSISTANCE
 
 
 
